--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Trigger Vercel Deploy
-        if: success()
+      - name: Deploy to Vercel
+        if: success() && github.ref == 'refs/heads/main'
         run: |
-          curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_9VJvrdcQZwxkk4AxTK3U9XcMzReO/csGO0TcuUU
+          curl -X POST ${{ secrets.VERCEL_DEPLOY_HOOK }}
