--- a/frontend/tsconfig.spec.json
+++ b/frontend/tsconfig.spec.json
@@ -6,7 +6,14 @@
     "outDir": "./out-tsc/spec",
     "types": [
       "vitest/globals"
-    ]
+    ],
+    "baseUrl": "src",
+    "paths": {
+      "@app/*": ["app/*"],
+      "@core/*": ["app/core/*"],
+      "@shared/*": ["app/shared/*"],
+      "@features/*": ["app/features/*"]
+    }
   },
   "include": [
     "src/**/*.d.ts",
